Fixing Vertical Alignment
Removed padding and margin from MST History description.

--- a/css/style.css
+++ b/css/style.css
@@ -670,6 +670,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding: 10px;
 }
 
+#long-history .section-description {
+  padding-bottom: 0px !important;
+  margin-bottom: 0px !important;
+}
 /* Initiatives Section
 --------------------------------*/
 #initiatives {
